# tosu-lyrics

./: .gitignore  .prettierrc  README.md  eslint.config.js  index.html  justfile  package.json  pnpm-lock.yaml  stats.html  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: release.yaml
src/: App.tsx  index.css  main.module.scss  main.tsx
src/adapters/: index.ts  lyric-adapter.ts  lyric-adaptor.ts  lyricAdapter.ts
src/adapters/netease/: index.ts
src/adapters/qq/: index.ts
src/api/: model.ts  websocket.ts
src/assets/Icons/: Cancel.tsx  ChevronRight.tsx  Content.tsx  Copy.tsx  Delete.tsx  Edit.tsx  Palette.tsx  Refresh.tsx  Save.tsx  SettingIcon.tsx  ShutDown.tsx  index.tsx
src/assets/svg/: copySvg.tsx
src/common/: cache.ts  config-async.ts  config-global.ts  constant.ts  do-request.ts  lrc-parse.ts  music-api.ts  param-parse.ts  proxy-request.ts  tosu-adapter.ts
src/common/neteast/: constant.ts  index.ts
src/common/qq/: constant.ts  index.ts
src/components/: CenterBox.tsx  Controller.tsx  LyricsBox.tsx
src/components/Controller/: index.tsx
src/components/Controller/ControlTools/: CurrentLyrics.tsx  DarkModeToggle.tsx  TextStyle.tsx  darkModeToggle.tsx
src/components/Controller/router/: index.tsx
src/components/center-box/: index.tsx
src/components/error/: ErrorFallback.tsx
src/components/lyrics-box/: index.tsx  styles.module.scss
src/components/ui/: Button.tsx  CustomColorSelector.tsx  DarkModeToggle.tsx  DragPanel.tsx  Mask.tsx  Select.tsx  ToggleList.tsx  ToggleListExtends.tsx  ToggleNSwitch.tsx  ToggleSwitch.tsx  Upload.tsx  customColorSelector.tsx  index.tsx
src/config/: constants.ts
src/hooks/: initializeApp.ts
src/pages/: App.tsx  ErrorPage.tsx
src/pages/Controller/: index.tsx
src/pages/Controller/ControlTools/: DarkModeToggle.tsx  TextStyle.tsx
src/pages/Controller/ControlTools/BlackList/: BlackList.tsx  index.tsx
src/pages/Controller/ControlTools/CacheManager/: index.tsx
src/pages/Controller/ControlTools/Client/: index.tsx
src/pages/Controller/ControlTools/Content/: BlackListLyrics.tsx  ClientList.tsx  CurrentLyrics.tsx  SearchResult.tsx  index.tsx
src/pages/Controller/ControlTools/TextStyle/: Font.tsx  TextColor.tsx  index.tsx
src/pages/Controller/router/: index.tsx
src/pages/LyricsBox/: index.tsx
src/routes/: index.tsx
src/services/: ConfigService.ts  WebSocketService.ts  configService.ts  webSocketService.ts
src/services/managers/: lyricManager.ts  tosuManager.ts
src/stores/: blackListStore.ts  blacklistStore.ts  indexStore.ts  lyricsStore.ts  settingsStore.ts
src/types/: config-global.ts  globalTypes.ts  lyricTypes.ts  tosuTypes.ts  ws-types.ts  wsLyricTypes.ts  wsTypes.ts
src/utils/: cache.ts  fonts.ts  helpers.ts  lrc-parse.ts  param-parse.ts  parseLyrics.ts  request.ts  string-utils.ts  utils.ts
tosu-proxy/: .gitignore  Cargo.toml  README.md  default.config.json5
tosu-proxy/lib/: ffprobe
tosu-proxy/lyric-macro/: Cargo.toml
tosu-proxy/lyric-macro/src/: lib.rs
tosu-proxy/src/: config.rs  error.rs  files.rs  lib.rs  main.rs  proxy.rs  util.rs  websocket.rs
tosu-proxy/src/database/: connect.rs  mod.rs
tosu-proxy/src/database/entity/: config.rs  lyric_cache.rs  lyric_config.rs  mod.rs  offset_cache.rs  setting.rs
tosu-proxy/src/lyric/: lyric.rs  lyric_source.rs  mod.rs  parse.rs
tosu-proxy/src/lyric/source/: mod.rs  netease.rs  qq.rs
tosu-proxy/src/model/: mod.rs  setting.rs  tosu_types.rs
tosu-proxy/src/model/websocket/: lyric.rs  mod.rs  setting.rs
tosu-proxy/src/model/websocket/setting/: base.rs  block.rs  mod.rs  song_info.rs
tosu-proxy/src/old/: config.rs  files.rs  mod.rs  websocket.rs
tosu-proxy/src/osu_source/: mod.rs  tosu.rs
tosu-proxy/src/server/: audio.rs  file.rs  font.rs  mod.rs  websocket.rs
tosu-proxy/src/service/: lyric_service.rs  mod.rs  song_source_service.rs  websocket_service.rs
tosu-proxy/src/setting/: mod.rs
