[package]
name = "tosu-proxy"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[[bin]]
name = "tosu-proxy"
path = "src/bin/old.rs"
required-features = ["old"]

[[bin]]
name = "osu-lyric"
path = "src/bin/new.rs"
required-features = ["new"]

[lints.rust]
unused = "allow"

[dependencies]
lyric-macro = { version = "0.0.1", path = "lyric-macro" }
reqwest = { version = "0.12.22", features = ["rustls-tls", "charset", "json"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["fs", "rt-multi-thread", "process", "sync", "macros"] }
# 后续将文件打包进二进制文件?
# rust-embed="8.6.0"

# new
async-trait = { version = "0.1.88", optional = true }
bincode = { version = "2.0.1", optional = true }
config = { version = "0.15.13", optional = true }
futures = { version = "0.3.31", optional = true }
futures-util = { version = "0.3.31", optional = true }
paste = { version = "1.0.15", optional = true}
regex = { version = "1.11.1", optional = true }
salvo = { version = "0.83.0", features = ["default", "serve-static", "websocket"], optional = true }
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-native-tls", "debug-print", "macros"], optional = true }
sea-schema = { version = "0.16.2", features = ["writer"], optional = true }
tokio-tungstenite = { version = "0.27.0", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tungstenite = { version = "0.27.0", optional = true }

# old
actix-web = { version = "4.11.0", optional = true }
actix-ws = { version = "0.3.0", optional = true }
actix-cors = { version = "0.7.1", optional = true }
actix-files = { version = "0.6.6", optional = true }


[features]
default = ["new"]
new = [
    "async-trait",
    "bincode",
    "config",
    "regex",
    "paste",
    "salvo",
    "tracing",
    "tokio-tungstenite",
    "tracing-subscriber",
    "tungstenite",
    "futures-util",
    "futures",
    "sea-orm",
    "sea-schema",
]
old = [
    "actix-web",
    "actix-ws",
    "actix-cors",
    "actix-files",
]
